WIP for #640